# deepl

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: DocumentTranslationError.md  GetDocumentStatus200Response.md  GetLanguages200ResponseInner.md  GetUsage200Response.md  Glossary.md  GlossarySourceLanguage.md  GlossaryTargetLanguage.md  ListGlossaries200Response.md  ListGlossaryLanguages200Response.md  ListGlossaryLanguages200ResponseSupportedLanguagesInner.md  ListGlossaryLanguages400Response.md  ManageGlossariesApi.md  MetaInformationApi.md  SourceLanguage.md  TranslateDocument200Response.md  TranslateDocumentsApi.md  TranslateText200Response.md  TranslateText200ResponseTranslationsInner.md  TranslateTextApi.md
src/apis/: configuration.rs  manage_glossaries_api.rs  meta_information_api.rs  mod.rs  translate_documents_api.rs  translate_text_api.rs
src/models/: document.rs  document_translation_error.rs  formality.rs  get_document_status_200_response.rs  get_languages_200_response_inner.rs  get_usage_200_response.rs  glossary.rs  glossary_source_language.rs  glossary_target_language.rs  list_glossaries_200_response.rs  list_glossary_languages_200_response.rs  list_glossary_languages_200_response_supported_languages_inner.rs  list_glossary_languages_400_response.rs  mod.rs  source_language.rs  target_language.rs  translate_document_200_response.rs  translate_text_200_response.rs  translate_text_200_response_translations_inner.rs
